# web-hotel-shipping-container-guest-4.1

./: .gitignore  000-default.conf  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  RELEASE  default-ssl.conf  deploy_qa.sh  manage.py  requirements.txt  setup.cfg
check_out/: apps.py  forms.py  mixins.py  samples.py  urls.py  views.py
core/: apps.py  urls.py
custom/: forms.py  urls.py  views.py
gtriip-certs/: gtriip.crt  gtriip.key
guest_app/: apps.py  context_processors.py  cron_jobs.py  crons.py  gateways.py  mixins.py  samples.py  urls.py  utilities.py  views.py
guest_base/: apps.py  forms.py  gateways.py  mixins.py  urls.py  views.py
hotel_guest/: requirements.txt  settings.py  urls.py  wsgi.py
lib/: MANIFEST.in  README.rst  setup.cfg
lib/guest_facing/check_out/: __init__.py  forms.py  urls.py  views.py
lib/guest_facing/check_out/static/check_out/js/mobile/: login.js
lib/guest_facing/check_out/static/check_out/scss/: base.scss
lib/guest_facing/check_out/static/check_out/scss/desktop/: bill.scss  complete.scss
lib/guest_facing/check_out/templates/check_out/: base.html
lib/guest_facing/check_out/templates/check_out/desktop/: base_desktop.html  login.html
lib/guest_facing/core/: __init__.py  apps.py  context_processors.py  mixins.py
lib/guest_facing/core/static/: 404.scss
lib/guest_facing/core/static/core/js/: base.js
lib/guest_facing/core/static/core/scss/: _content.scss  _form.scss  _loader.scss  _progress.scss  _variable.scss
lib/guest_facing/core/static/custom/: custom.scss
lib/guest_facing/core/templates/: 404.html
lib/guest_facing/core/templates/core/: base.html
lib/guest_facing/registration/: __init__.py  apps.py  forms.py
lib/guest_facing/registration/static/registration/js/: base.js
lib/guest_facing/registration/static/registration/js/desktop/: detail.js  other_info.js  reservation.js
lib/guest_facing/registration/static/registration/js/mobile/: detail.js  login.js
lib/guest_facing/registration/static/registration/scss/: base.scss
lib/guest_facing/registration/static/registration/scss/desktop/: login.scss  other_info.scss  reservation.scss
lib/guest_facing/registration/static/registration/scss/mobile/: passport.scss
lib/guest_facing/registration/templates/registration/desktop/: complete.html  detail.html  login.html  passport.html  reservation.html
lib/guest_facing/registration/templates/registration/email/: complete.html
lib/guest_facing/registration/templates/registration/mobile/: detail.html  login.html  passport.html
lib/guest_facing/registration_adhoc_guest/: __init__.py  views.py
lib/guest_facing/registration_adhoc_guest/static/registration/js/mobile/: detail.js
lib/guest_facing/registration_adhoc_guest/templates/registration/desktop/: detail.html  guest_list.html
lib/guest_facing/registration_adhoc_guest/templates/registration/mobile/: detail.html
lib/guest_facing/registration_ocr_required/: __init__.py  apps.py  forms.py  views.py
lib/guest_facing/registration_ocr_required/templates/registration/desktop/: detail.html  extra_passport.html
lib/guest_facing/registration_ocr_required/templates/registration/mobile/: detail.html  extra_passport.html
pre_arrival/: apps.py  context_processors.py  cron_jobs.py  forms.py  mixins.py  samples.py  urls.py  utilities.py  (+1 more)
(+370 files in other folders)
