[metadata]
name = guest_facing
version = 4.1.3
description = Django app for hotel guest facing.
long_description = file: README.md
url = https://www.gtriip.com/
author = GTRIIP
author_email = sales@gtriipglobal.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2.17
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    aiohttp==3.7.4.post0
    async-timeout==3.0.1
    attrs==20.3.0
    cbor2==5.2.0
    certifi==2020.4.5.1
    cffi==1.14.3
    chardet==3.0.4
    cryptography==3.2.1
    csscompressor==0.9.5
    Django==2.2.17
    django-appconf==1.0.3
    django-compressor==2.4
    django-countries==6.1.2
    django-libsass==0.8
    django-recaptcha==2.0.6
    django-user-agents==0.4.0
    django-widget-tweaks==1.4.8
    idna==2.9
    libsass==0.19.4
    multidict==5.1.0
    pubnub==5.1.0
    pycparser==2.20
    pycryptodomex==3.10.1
    pytz==2019.3
    rcssmin==1.0.6
    requests==2.23.0
    rjsmin==1.1.0
    six==1.14.0
    sqlparse==0.3.1
    typing-extensions==3.7.4.3
    ua-parser==0.10.0
    urllib3==1.25.9
    user-agents==2.1
    wfastcgi==3.0.0
    yarl==1.6.3
